remove useless skill build in AgentBuilder